# ig-client

./: Cargo.toml  README.md  README.tpl
doc/: INTEGRATION_GUIDE.md  NEW_CLIENT_API.md  RATE_LIMITER.md
examples/costs/: Cargo.toml
examples/orders/: Cargo.toml
examples/positions/: Cargo.toml
examples/sentiment/: Cargo.toml
examples/simples/: Cargo.toml
examples/watchlist/: Cargo.toml
src/: error.rs  lib.rs
src/application/: auth.rs  client.rs  dynamic_streamer.rs
src/application/interfaces/: account.rs  costs.rs  mod.rs  operations.rs  order.rs  sentiment.rs  watchlist.rs
src/model/: auth.rs  http.rs  requests.rs  responses.rs  streaming.rs
src/presentation/: account.rs  chart.rs  instrument.rs  market.rs  order.rs  price.rs  trade.rs
src/storage/: historical_prices.rs  utils.rs
src/utils/: config.rs  finance.rs  id.rs  logger.rs  parsing.rs
tests/unit/: error_tests.rs
tests/unit/model/: test_responses.rs
tests/unit/presentation/: test_price.rs
